[gd_scene load_steps=4 format=2]

[ext_resource path="res://AnimationMaker.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://SpriteFrames.tres" type="SpriteFrames" id=3]

[node name="AnimationMaker" type="ColorRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.707031, 0.231995, 0.231995, 1 )
script = ExtResource( 1 )

[node name="Pose1" type="ViewportContainer" parent="." index="0"]

modulate = Color( 0.941176, 0.890196, 0.890196, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 200.0
margin_right = -724.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="Viewport" type="Viewport" parent="Pose1" index="0"]

arvr = false
size = Vector2( 200, 200 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="icon" type="Sprite" parent="Pose1/Viewport" index="0"]

position = Vector2( 100, 100 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Transform" ]

[node name="Pose2" type="ViewportContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 200.0
margin_right = 600.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Rect" ]

[node name="Viewport" type="Viewport" parent="Pose2" index="0"]

arvr = false
size = Vector2( 200, 200 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="icon" type="Sprite" parent="Pose2/Viewport" index="0"]

position = Vector2( 100, 100 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Pose3" type="ViewportContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 700.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Viewport" type="Viewport" parent="Pose3" index="0"]

arvr = false
size = Vector2( 200, 200 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="icon" type="Sprite" parent="Pose3/Viewport" index="0"]

position = Vector2( 100, 100 )
scale = Vector2( 7, 7 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Animation" type="AnimatedSprite" parent="." index="3"]

position = Vector2( 500, 107.6 )
scale = Vector2( -2.5, -2.3125 )
frames = ExtResource( 3 )
animation = "default"
playing = true


